Testimonial section and Slider

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+.rdrDayToday .rdrDayNumber span::after {
+  background: #ed1d24;
+}
+
+.rdrMonthAndYearPickers {
+  font-size: 16px;
+}
+
+.rdrDayNumber,
+.rdrWeekDay {
+  color: #1e1f23 !important;
+  font-weight: 500 !important;
+}
+
+/* swiper styles */
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullets,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  background: #f13024;
+}
+
 @layer base {
   body {
     @apply text-primary bg-body;
